<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="112dp"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ProductDetailsForm">

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/add_database"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Product Details"
        android:textSize="24dp"
        android:textColor="@color/lightGreen"
        android:layout_marginStart="10dp"
        android:textStyle="bold" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        android:paddingBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/upc" />

                <TextView
                    android:id="@+id/barcodeInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/textview_background"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:inputType="number"
                    android:text="8901571008483"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/Title" />

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/textview_background"
                    android:gravity="center_vertical"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/textview_background"
                    android:gravity="center_vertical"
                    android:padding="8dp" />
            </LinearLayout>

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical"-->
<!--                android:paddingBottom="30dp">-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:paddingStart="10dp"-->
<!--                    android:paddingEnd="10dp"-->
<!--                    android:paddingBottom="10dp"-->
<!--                    android:text="@string/addImage" />-->

<!--                <Button-->
<!--                    android:id="@+id/addImgBtn"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Add Images" />-->

<!--                <Button-->
<!--                    android:id="@+id/uploadImgBtn"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Upload Images" />-->
<!--            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="PRODUCT RATINGS : " />

                <RatingBar
                    android:id="@+id/productRatings"
                    android:layout_width="252dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/textview_background"
                    android:numStars="5"
                    android:padding="8dp"
                    android:progressTint="#FFF500" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/review" />

                <EditText
                    android:id="@+id/review"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/textview_background"
                    android:gravity="center_vertical"
                    android:padding="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/sustainableRatings" />

                <RatingBar
                    android:id="@+id/sustainabilityRatings"
                    android:layout_width="252dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/textview_background"
                    android:numStars="5"
                    android:padding="8dp"
                    android:progressTint="#FFF500" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/textview_background"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/dropdownForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/sustainalbilityInfo"
                        android:textSize="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/dropdownArrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_arrow_drop_down_24" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sustainabilityDetailsForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/productRecyclability"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="30dp"
                            android:text="IS PRODUCT RECYCLABLE ? "
                            android:textSize="20dp" />

                        <RadioGroup
                            android:id="@+id/radioGroupRecyclable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioButtonRecyclableYes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:text="Yes" />

                            <RadioButton
                                android:id="@+id/radioButtonRecyclableNo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="No" />
                        </RadioGroup>

                    </LinearLayout>

                    <EditText
                        android:id="@+id/recyclablityDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:hint="RECYCLABILITY DETAILS" />

                    <EditText
                        android:id="@+id/energyEfficiencyDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:hint="ENERGY EFFICIENCY DETAILS" />

                    <EditText
                        android:id="@+id/packgingDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:hint="PACKGING DETAILS" />


                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/yellow"
                android:text="ADD DETAILS"
                android:textColor="@color/green"
                android:textSize="24dp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>